add endpoints for trusted users
